<resources>
    <string name="app_name">仓库管理</string>
    <string name="login_name">登录名</string>
    <string name="login_pswd">密码</string>
    <string name="login">登录</string>
    <string name="model_select_title">选择</string>
    <string name="house_select_title">选择仓库</string>
    <string name="choice">备货</string>
    <string name="inbound">入库</string>
    <string name="call_repairs">报修</string>
    <string name="bom_time">项目日期</string>
    <string name="bom_user">下单人</string>
    <string name="show_bom">查看订单</string>
    <string name="go_choice">备货</string>
    <string name="device_name">设备名称</string>
    <string name="device_class">设备系列号</string>
    <string name="repair_status">维修状态</string>
    <string name="notice_power_failed">
         1.请确认设置-〉用户自定义-〉EMSH设置-〉开启EMSH服务已勾选\n
                            2.请确认PDA右上角有两个电池图标，且都显示有电；\n
                            如果只有一个电池图标，请确认把枪和PDA连接是否可靠；\n如果左侧电池图标没电，请使用专用三合一座充充电\n
                            3.如还有问题，请截取EMSH设置-〉EMSH状态的截图，发送给相关技术支持
    </string>
    <string name="poweon_failed">电源无法开启</string>
    <string name="unexpired">未过期</string>
    <string name="beoverdue">已过期</string>
    <string name="my">我的订单</string>
    <string name="poweron_success">上电成功</string>
    <string name="double_click_exit_app">连续点击返回退出应用</string>
    <string name="open_quick_inventory_failed">开启快速盘点失败</string>
    <string name="bomname">备货项目</string>
    <string name="scan">扫码</string>
    <string name="choicedevice">选择设备</string>
    <string name="choiceparts">选择配件</string>
    <string name="delete">删除</string>
    <string name="see">查看</string>
    <string name="device_info">设备详细信息</string>
    <string name="edit">编辑</string>
    <string name="device_type">设备型号</string>
    <string name="nameLike">名称</string>
    <string name="size">数量</string>
    <string name="confirm">确认备货</string>
    <string name="scaning">正在扫描设备</string>
    <string name="inroom">入库</string>
    <string name="charing">正在充电</string>
    <string name="charing_full">把枪电池已充满</string>

</resources>