<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/et_login_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/login_name"
        android:text="110"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/et_login_pswd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/login_pswd"
        android:text="13699867536"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintVertical_bias="0.65"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
