<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_model_select_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bg_color"
        android:text="@string/model_select_title"
        android:gravity="center"
        android:textColor="@color/bg_white"
        android:textSize="@dimen/x18"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.07"/>

    <TextView
        android:id="@+id/tv_model_choice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_rect_blue"
        android:text="@string/choice"
        android:gravity="center"
        android:textColor="@color/bg_white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_model_inbound"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_rect_blue"
        android:text="@string/inbound"
        android:gravity="center"
        android:textColor="@color/bg_white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_model_call_repairs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/edittext_rect_blue"
        android:text="@string/call_repairs"
        android:gravity="center"
        android:textColor="@color/bg_white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_version_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x5"
        android:layout_marginStart="@dimen/x5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

