<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/bg_gray"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x60"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:id="@+id/tv_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/unexpired"
            android:gravity="center"
            android:textColor="@color/bg_white"
            android:textSize="14sp"
            android:background="@drawable/edittext_rect_dark_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.33"/>

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/beoverdue"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_0"
            app:layout_constraintWidth_percent="0.33"/>

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/my"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_1"
            app:layout_constraintWidth_percent="0.33"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>