<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/x180"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_device_name_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|right"
        android:textSize="18dp"
        android:textColor="@color/bg_black"
        android:textStyle="bold"
        android:text="@string/device_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintWidth_percent="0.24"
        app:layout_constraintHeight_percent="0.14"/>

    <TextView
        android:id="@+id/tv_device_name_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="left|center"
        android:textSize="18dp"
        android:textColor="@color/bg_black"
        android:textStyle="bold"
        android:text="闸机"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintWidth_percent="0.71"
        app:layout_constraintHeight_percent="0.14"/>

    <TextView
        android:id="@+id/tv_device_class_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|right"
        android:textSize="18dp"
        android:textColor="@color/bg_black"
        android:textStyle="bold"
        android:text="@string/device_class"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintWidth_percent="0.24"
        app:layout_constraintHeight_percent="0.14"/>

    <TextView
        android:id="@+id/tv_device_class_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="left|center"
        android:textSize="18dp"
        android:textColor="@color/bg_black"
        android:textStyle="bold"
        android:text="yyy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tv_device_name_value"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.14"/>

    <TextView
        android:id="@+id/tv_repair_status_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|right"
        android:textSize="18dp"
        android:textColor="@color/bg_black"
        android:textStyle="bold"
        android:text="@string/repair_status"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintWidth_percent="0.24"
        app:layout_constraintHeight_percent="0.14"/>

    <TextView
        android:id="@+id/tv_repair_status_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="left|center"
        android:textSize="18dp"
        android:textColor="@color/bg_black"
        android:textStyle="bold"
        android:text="是好的"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintWidth_percent="0.71"
        app:layout_constraintHeight_percent="0.14"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
