<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/bg_gray"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:background="@drawable/edittext_rect_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/tv_bom_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="@dimen/x16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/bomname"
            android:textStyle="bold"
            android:gravity="left|center"/>

        <TextView
            android:id="@+id/tv_bom_name_value"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_bom_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/font_blue1"
            android:textStyle="bold"
            android:textSize="@dimen/x16"
            android:gravity="left|center"/>

        <TextView
            android:id="@+id/tv_bom_info"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.88"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintVertical_bias="0.85"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintLeft_toLeftOf="@+id/tv_bom_name"
            android:text="@string/bomname"
            android:gravity="left|center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x60"
        android:layout_marginTop="@dimen/x6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/tv_choice_device"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/choicedevice"
            android:gravity="center"
            android:background="@drawable/edittext_rect_white_frame"
            android:textSize="@dimen/x13"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.5"/>

        <TextView
            android:id="@+id/tv_choice_parts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/choiceparts"
            android:gravity="center"
            android:background="@drawable/edittext_rect_white_frame"
            android:textSize="@dimen/x13"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_choice_device"
            app:layout_constraintWidth_percent="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ExpandableListView
        android:id="@+id/recycler_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/x9"
        android:groupIndicator="@null"
        android:divider="@null"
        android:background="@drawable/edittext_rect_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintBottom_toTopOf="@+id/bottom"
        >
    </ExpandableListView>

</androidx.constraintlayout.widget.ConstraintLayout>